# ampere-os

./: .gitmodules  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md
src/: device.c  device.h  kernel.c  uart.c  uart.h  utils.c  utils.h
src/arch/aarch64/: bootloader.S  linker.ld
